--- a/detalle.html
+++ b/detalle.html
@@ -48,27 +48,28 @@
 <!-- /NAVBAR -->
 
 <!-- HERO: Sección de portada con llamado a la acción -->
-<section class="hero-sectiondetalle section-spacing container-fluid px-lg-5 d-flex align-items-center justify-content-between">
-  <div class="row align-items-center">
-    <!-- Texto principal -->
-    <div class="col-lg-6">
-      <h1 class="h1-custom">Legendary Loot </h1>
-      <p class="p-custom">Accedé a la box más épica de todas:  figuras premium, ropa exclusiva, arte 
-numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
-      <div class="d-flex gap-3 mt-4">
-        <a href="#" class="btn btn-light text-white">Suscribirse</a>
-       <!-- <a href="#" class="btn btn-outline-dark">Acción Secundaria</a>-->
+<section class="hero-sectiondetalle">
+  <div class="hero-contentdetalle d-flex align-items-center justify-content-between">
+  <div class="container">
+    <div class="row align-items-center">
+      <!-- Texto principal -->
+      <div class="col-lg-6">
+        <h1 class="h1-custom">Legendary Loot</h1>
+        <p class="p-custom">Accedé a la box más épica de todas: figuras premium, ropa exclusiva, arte numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
+        <div class="d-flex gap-3 mt-4">
+          <a href="#" class="btn btn-light text-white">Suscribirse</a>
+        </div>
       </div>
-    </div>
-    <!-- Imagen destacada -->
-    <div class="col-lg-6 text-center">
-      <img src="imagenes/hero detalle.png" class="img-fluid img-rounded" alt="Imagen Hero">
+
+      <!-- Imagen destacada -->
+      <div class="col-lg-6 text-center">
+        <img src="imagenes/hero detalle.png" class="img-fluid img-rounded" alt="Imagen Hero">
+      </div>
     </div>
   </div>
 </section>
+
 <!-- /HERO -->
-
-
 
 <!--QUE INCLUYE 2-->
 <section class="box-section">
@@ -114,12 +115,11 @@ numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
 <!--QUE INCLUYE 2-->
 
 
-
 <!-- NUMEROS-->
 <!-- Comunidad creciendo: sección con estadísticas -->
-<section class="section-spacing text-center bg-numeros" style="padding: 40px 0;">
+<section class="section-spacing text-center bg-numeros py-5">
   <div class="container">
-    <h3 class="h3-custom" style="color:#EC135D;">
+    <h3 class="h3-custom" style="color: #EC135D;">
       Nuestra comunidad sigue <br> en crecimiento
     </h3>
     <p class="text-dark mb-5">Datos que hablan por sí solos</p>
@@ -146,12 +146,12 @@ numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
       <!-- Caja 4 -->
       <div class="col-md-3 col-6 mb-4">
         <h1 class="fw-bold contador porcentaje" data-target="98">0</h1>
-</h1>
         <p class="fw-semibold text-dark">de satisfacción</p>
       </div>
     </div>
   </div>
 </section>
+
 
 <!-- NUMEROS-->
 
@@ -228,10 +228,13 @@ numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
 <!-- /PLANES DE SUSCRIPCIÓN -->
 
 <!-- GALERÍA A: Grid clásico de 3 columnas -->
-  <section class="py-5 text-center text-white">
+<!-- GALERÍA A: Grid clásico de 3 columnas -->
+<section class="py-5 text-center text-white">
   <div class="container">
     <h2 class="fw-bold mb-2">Galería de imágenes</h2>
     <div class="row g-3 justify-content-center">
+      
+      <!-- Fila 1 -->
       <div class="col-6 col-md-4">
         <img src="imagenes/Mask group.png" class="img-fluid rounded" alt="Imagen 1">
       </div>
@@ -241,6 +244,8 @@ numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
       <div class="col-6 col-md-4">
         <img src="imagenes/Mask group-5.png" class="img-fluid rounded" alt="Imagen 3">
       </div>
+
+      <!-- Fila 2 -->
       <div class="col-6 col-md-4">
         <img src="imagenes/Mask group-3.png" class="img-fluid rounded" alt="Imagen 4">
       </div>
@@ -250,9 +255,22 @@ numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
       <div class="col-6 col-md-4">
         <img src="imagenes/Mask group-2.png" class="img-fluid rounded" alt="Imagen 6">
       </div>
+
+      <!-- Fila 3 - Nueva -->
+      <div class="col-6 col-md-4">
+        <img src="imagenes/Mask group-7.png" class="img-fluid rounded" alt="Imagen 7">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="imagenes/Mask group-6.png" class="img-fluid rounded" alt="Imagen 8">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="imagenes/Mask group-8.png" class="img-fluid rounded" alt="Imagen 9">
+      </div>
+
     </div>
   </div>
 </section>
+
 
 
 <!-- CONTACTO -->
@@ -267,7 +285,7 @@ numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
   <div class="row gx-0">
     
     <!-- Columna Izquierda: Información de contacto -->
-    <div class="col-md-6">
+    <div class="col-md-6 mb-5 mb-md-0">
       <div class="d-flex align-items-center mb-4">
         <img src="imagenes/ubicacion.png" alt="Ubicación" class="me-3" width="40">
         <p class="mb-0">Calle Fandom 1983, Piso 3<br>Barrio Geek, CABA, Argentina</p>
@@ -290,7 +308,7 @@ numerado y objetos de culto que no vas a encontrar en ningún otro lado.</p>
     </div>
 
     <!-- Columna Derecha: Formulario -->
-    <div class="col-md-6">
+    <div class="col-md-6 mb-5 mb-md-0">
       <form>
         <div class="mb-3">
           <input type="text" class="form-control" placeholder="Tu nombre">
