--- a/prepage.html
+++ b/prepage.html
@@ -11,7 +11,7 @@
     <a href="index.html">
     <button type="button" class="btn btn-primary my-2">Página Home</button></a>
     <!--Insertar link debajo-->
-    <a href="de">
+    <a href="detalle.html">
     <button type="button" class="btn btn-primary my-2">Página detalle</button></a>
         
 
