--- a/detalle.html
+++ b/detalle.html
@@ -29,7 +29,7 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <!-- Logo o nombre del sitio -->
-    <a class="navbar-brand" href="#">COLLECLUB</a>
+    <a class="navbar-brand" href="index.html">COLECLUB</a>
     <!-- Botón para mostrar menú en mobile -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
@@ -37,11 +37,11 @@
     <!-- Ítems del menú -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Suscripciones</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">GeekSwap</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link" href="#otrassuscripciones">Suscripciones</a></li>
+        <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contacto2">Contacto</a></li>
       </ul>
     </div>
   </div>
@@ -158,7 +158,7 @@
 
 
 <!-- PLANES DE SUSCRIPCIÓN: Sección con 3 opciones destacadas -->
-<section class="section-spacing container-fluid bg-suscripciones2 px-5 text-center">  
+<section id=otrassuscripciones class="section-spacing container-fluid bg-suscripciones2 px-5 text-center">  
   <h3 class="h3-custom">Explorá nuestras cajas</h3>
   <p class="p-custom2">¡Hay una caja para cada fan!</p>
   
@@ -230,7 +230,7 @@
 
 <!-- GALERÍA A: Grid clásico de 3 columnas -->
 <!-- GALERÍA A: Grid clásico de 3 columnas -->
-<section class="py-5 text-center text-white">
+<section id=galeria class="py-5 text-center text-white">
   <div class="container">
     <h2 class="fw-bold mb-2">Galería de imágenes</h2>
     <div class="row g-3 justify-content-center">
@@ -275,7 +275,7 @@
 
 
 <!-- CONTACTO -->
- <div class="container py-5 text-white">
+ <div id=contacto2 class="container py-5 text-white">
   <!-- Título y subtítulo centrados -->
   <div class="text-center mb-5">
     <h2 class="h3-custom">¿Te quedó alguna duda?</h2>
@@ -335,7 +335,7 @@
       
       <!-- Logo + Lema -->
       <div class="col-md-3 mb-4 mb-md-0">
-        <h3 class="fw-bold">COLLECLUB</h3>
+        <h3 class="fw-bold">COLECCLUB</h3>
         <p class="fst-italic">Un club para los que<br>coleccionan en serio</p>
       </div>
       
