--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <!-- Logo o nombre del sitio -->
-    <a class="navbar-brand" href="#">COLLECLUB</a>
+    <a class="navbar-brand" href="#">COLECCLUB</a>
     <!-- Botón para mostrar menú en mobile -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
@@ -39,10 +39,10 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Suscripciones</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">GeekSwap</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link" href="#nosotros">Nosotros</a></li>
+        <li class="nav-item"><a class="nav-link" href="#suscripciones">Suscripciones</a></li>
+        <li class="nav-item"><a class="nav-link" href="#geekswap">GeekSwap</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
       </ul>
     </div>
   </div>
@@ -61,7 +61,7 @@
         <h1 class="h1-custom">Cultura pop directo a tu puerta</h1>
         <p class="p-custom">Cajas con ítems oficiales y exclusivos, beneficios únicos y acceso a nuestra comunidad Geek.</p>
         <div class="d-flex gap-3 mt-4">
-          <a href="#" class="btn btn-dark">Suscribirse</a>
+          <a href="#suscripciones" class="btn btn-dark">Suscribirse</a>
        <!-- <a href="#" class="btn btn-outline-dark">Acción Secundaria</a>-->
       </div>
     </div>
@@ -80,7 +80,7 @@
 
 
 <!-- SECCIÓN B: Imagen izquierda, texto derecha -->
-<section class="section-spacing container">
+<section id=nosotros class="section-spacing container">
   <div class="row align-items-center">
     <!-- Columna de imagen -->
     <div class="col-lg-6 text-center mb-4 mb-lg-0">
@@ -139,7 +139,7 @@
 </section>
   
 <!-- PLANES DE SUSCRIPCIÓN: Sección con 3 opciones destacadas -->
-<section class="section-spacing bg-geekswap text-white text-center">
+<section id="suscripciones" class="section-spacing bg-geekswap text-white text-center">
   <div class="container py-5">
     <h3 class="h3-custom mb-2">Explorá nuestras cajas</h3>
     <p class="p-custom2 mb-5">¡Hay una caja para cada fan!</p>
@@ -274,7 +274,7 @@
 </section>
 
 <!-- SECCIÓN C: Texto izquierda, imagen derecha -->
- <section class="geekswap">
+ <section id=geekswap class="geekswap">
   <div class="geekswap-content d-flex align-items-center justify-content-between">
   <div class="container">
     <div class="row align-items-center">
@@ -451,7 +451,7 @@
 
 
  <!-- CONTACTO -->
- <div class="container py-5 text-white">
+ <div id=contacto class="container py-5 text-white">
   <!-- Título y subtítulo centrados -->
   <div class="text-center mb-5">
     <h2 class="h3-custom">¿Te quedó alguna duda?</h2>
@@ -512,7 +512,7 @@
       
       <!-- Logo + Lema -->
       <div class="col-md-3 mb-4 mb-md-0">
-        <h3 class="fw-bold">COLLECLUB</h3>
+        <h3 class="fw-bold">COLECCLUB</h3>
         <p class="fst-italic">Un club para los que<br>coleccionan en serio</p>
       </div>
       
